; ModuleID = '/home/carl/AnghaBench/redis/src/extr_dict.c_dictRehashMilliseconds.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_dict.c_dictRehashMilliseconds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dictRehashMilliseconds(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = call i64 (...) @timeInMilliseconds()
  store i64 %7, i64* %5, align 8
  store i32 0, i32* %6, align 4
  br label %8

8:                                                ; preds = %22, %2
  %9 = load i32*, i32** %3, align 8
  %10 = call i64 @dictRehash(i32* %9, i32 100)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %23

12:                                               ; preds = %8
  %13 = load i32, i32* %6, align 4
  %14 = add nsw i32 %13, 100
  store i32 %14, i32* %6, align 4
  %15 = call i64 (...) @timeInMilliseconds()
  %16 = load i64, i64* %5, align 8
  %17 = sub nsw i64 %15, %16
  %18 = load i32, i32* %4, align 4
  %19 = sext i32 %18 to i64
  %20 = icmp sgt i64 %17, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %12
  br label %23

22:                                               ; preds = %12
  br label %8

23:                                               ; preds = %21, %8
  %24 = load i32, i32* %6, align 4
  ret i32 %24
}

declare dso_local i64 @timeInMilliseconds(...) #1

declare dso_local i64 @dictRehash(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
